<resources>
    <string name="app_name">CovidNepal</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="latest_news">Latest News</string>
    <string name="hospitals">Hospitals</string>
    <string name="developer_info">Developer Info</string>
    <string name="update_data">Update Data</string>
    <string name="global_statistics">Global Statistics</string>
    <string name="cases">Cases</string>
    <string name="nepal_statistics">Nepal Statistics</string>
    <string name="_25644296">25,644,296</string>
    <string name="recovered">Recovered</string>
    <string name="_17945066">17,945,066</string>
    <string name="deaths">Deaths</string>
    <string name="_854861">854,861</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="exit">Exit</string>
    <string name="covid_nepal">Covid Updates Nepal</string>
    <string name="province_details">Province</string>
    <string name="district">District</string>
    <string name="municipality">Municipality</string>
    <string name="gender">Gender</string>
    <string name="age_group">Age Group</string>
    <string name="_40255">40255</string>
    <string name="province_1">Province 1</string>
    <string name="active">Active</string>
    <string name="_1024">1024</string>
    <string name="_1000">1000</string>
    <string name="_800">800</string>
    <string name="_8">8</string>
    <string name="today_recovered">Today Recovered</string>
    <string name="total_test_done">Total Test Done</string>
    <string name="_1111111111111">1111111111111</string>
    <string name="rdt_test_done">RDT Test Done</string>
    <string name="tested_negative">Tested Negative</string>
    <string name="quarantined">Quarantined</string>
    <string name="in_isolation">In Isolation</string>
    <string name="tests_done">Tests Done</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="_0_17">0 - 17</string>
    <string name="nepal_covid_19_updates">Nepal Covid-19 Updates</string>
    <string name="covid_19_hotline_number">Covid-19 Hotline Number</string>
    <string name="_9851_255_834">9851-255-834</string>
    <string name="_9851_255_837">9851-255-837</string>
    <string name="_9851_255_839">9851-255-839</string>
    <string name="_8am_8pm">(8am-8pm)</string>
    <string name="_1115">1115</string>
    <string name="_6am_10pm">(6am-10pm)</string>
    <string name="stay_safe_stay_healthy">Stay Safe Stay Healthy</string>
    <string name="rojan_dahal">Rojan Dahal</string>
    <string name="_detail_intro">I am an Engineering aspirant and an enthusiast.
        I want to learn Android development, Cloud Computing, AI, Web Development.
        I am interested in Java, Python, Javascript, C and C++.</string>
    <string name="mr_dahalrojan_gmail_com">mr.dahalrojan@gmail.com</string>
    <string name="contact_info">Contact Info:</string>
    <string name="fb_id">https://www.facebook.com/rojan.dahal.50</string>
    <string name="insta_link">https://www.instagram.com/rozan_dahal_</string>
    <string name="twitter_link">https://twitter.com/rose_n_dahal</string>
    <string name="github_link">https://github.com/rojandahal</string>
</resources>