<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.covidnepal.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_latestnews"
        android:name="com.example.covidnepal.ui.latestnews.LatestNewsFragment"
        android:label="@string/latest_news"
        tools:layout="@layout/fragment_latestnews" />

    <fragment
        android:id="@+id/nav_hospital"
        android:name="com.example.covidnepal.ui.hospitals.HospitalFragment"
        android:label="@string/hospitals"
        tools:layout="@layout/fragment_hospitals" />

    <fragment
        android:id="@+id/nav_developerInfo"
        android:name="com.example.covidnepal.ui.developerinfo.DeveloperInfoFragment"
        android:label="@string/developer_info"
        tools:layout="@layout/fragment_developerinfo" />
</navigation>