<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/worldStatsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:padding="8dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardBackgroundColor="@color/lightPink"
        app:cardUseCompatPadding="true"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        android:focusable="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/provinceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/bold2"
                android:padding="4dp"
                android:text="@string/province_1"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                app:drawableEndCompat="@drawable/ic_virus" />

            <LinearLayout
                android:id="@+id/firstLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_margin="4dp"
                android:layout_below="@id/provinceName">

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"
                    android:background="@drawable/background_cases"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_cases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:text="@string/cases"
                        android:shadowColor="@android:color/black"
                        android:shadowRadius="5"
                        android:textColor="@color/white"
                        android:fontFamily="@font/bold2"/>

                    <TextView
                        android:id="@+id/province_cases_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        android:layout_margin="4dp"
                        android:fontFamily="@font/bold2"
                        android:textColor="@color/white"
                        android:text="@string/_1024" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:layout_marginStart="48dp"
                    android:background="@drawable/background_cases"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView_active"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:text="@string/active"
                        android:shadowColor="@android:color/black"
                        android:shadowRadius="5"
                        android:textColor="@color/yellow"
                        android:fontFamily="@font/bold2"/>

                    <TextView
                        android:id="@+id/world_recovered_number"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        android:layout_margin="4dp"
                        android:fontFamily="@font/bold2"
                        android:textColor="@color/white"
                        android:text="@string/_1000" />


                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondLinear"
                android:layout_below="@id/firstLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:layout_margin="4dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:background="@drawable/background_cases">

                        <TextView
                            android:id="@+id/textView_recovered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:textSize="20sp"
                            android:text="@string/recovered"
                            android:shadowColor="@android:color/black"
                            android:shadowRadius="5"
                            android:textColor="@color/greeen"
                            android:fontFamily="@font/bold2"/>

                        <TextView
                            android:id="@+id/province_active_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:layout_marginTop="8dp"
                            android:textSize="18sp"
                            android:layout_margin="4dp"
                            android:fontFamily="@font/bold2"
                            android:textColor="@color/white"
                            android:text="@string/_800" />

                    </LinearLayout>

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="4dp"
                    android:layout_marginStart="48dp"
                    android:paddingEnd="4dp"
                    android:background="@drawable/background_cases">

                    <TextView
                        android:id="@+id/textView_deaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:text="@string/deaths"
                        android:shadowColor="@android:color/black"
                        android:shadowRadius="5"
                        android:textColor="@color/red"
                        android:fontFamily="@font/bold2"/>

                    <TextView
                        android:id="@+id/province_deaths"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAlignment="center"
                        android:layout_marginTop="8dp"
                        android:textSize="18sp"
                        android:layout_margin="4dp"
                        android:fontFamily="@font/bold2"
                        android:textColor="@color/white"
                        android:text="@string/_8" />

                </LinearLayout>

                </LinearLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>